<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="@dimen/layout_padding_small"
        android:orientation="vertical">

        <TextView
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_amazing"
            android:padding="@dimen/layout_margin_small"
            android:text="@string/choose_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/menu_button0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/layout_margin_small"
            android:text="@string/rock_paper_scissors"/>

        <Button
            android:id="@+id/menu_button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/layout_margin_small"
            android:text="@string/rock_paper_scissors_lizard_spock"/>

    </LinearLayout>

</FrameLayout>