<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">
    <RelativeLayout
        android:id="@+id/linear0"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/element_height_regular"
            android:layout_height="@dimen/element_height_regular"
            android:background="@drawable/ic_action_back_light"
            android:layout_alignParentStart="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="@dimen/layout_padding_small"
        android:orientation="vertical">

        <TextView
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_amazing"
            android:padding="@dimen/layout_margin_small"
            android:text="@string/choose_game_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/mode_button0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/layout_margin_small"
            android:text="@string/choose_game_mode_compuer_player"/>

        <Button
            android:id="@+id/mode_button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/layout_margin_small"
            android:text="@string/choose_game_mode_compuer_computer"/>

    </LinearLayout>

</FrameLayout>