<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorLightGrey"
    tools:context=".RPSSLFragment">
    
    <RelativeLayout
        android:id="@+id/linear0"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        
        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/element_height_regular"
            android:layout_height="@dimen/element_height_regular"
            android:background="@drawable/ic_action_back_light"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/messageview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/back"
            android:textAlignment="center"
            android:layout_centerVertical="true"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_very_large"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linear2"
        android:layout_below="@+id/linear0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_bot"
            android:text="@string/game_start"
            android:textSize="@dimen/text_size_very_large"
            android:textColor="@color/colorBlack"
            android:padding="@dimen/layout_padding_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/bot"
            android:layout_weight="1"/>


        <TextView
            android:id="@+id/text_player"
            android:text="@string/game_start"
            android:textSize="@dimen/text_size_very_large"
            android:textColor="@color/colorBlack"
            android:padding="@dimen/layout_padding_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/user"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_marginTop="@dimen/layout_margin_regular"
        android:padding="@dimen/layout_padding_small"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:text="@string/element_rock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_margin_small"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/button2"
                android:text="@string/element_paper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_margin_small"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/button3"
                android:text="@string/element_scissors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear4"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_small"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:text="@string/element_spock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_margin_small"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/button5"
                android:text="@string/element_lizard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:layout_weight="1"/>

        </LinearLayout>

        <Button
            android:id="@+id/button6"
            android:visibility="gone"
            android:text="@string/game_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/layout_margin_small"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

</RelativeLayout>